syntax = "proto3";

import "google/protobuf/any.proto"; 

service GatewayService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string client_version = 3;
}

message LoginResponse {
  enum Result {
    OK = 0;
    INVALID_TOKEN = 1;
    // ...
  }

  Result result = 1;
  string session_id = 2;
  string username = 3;
  string user_id = 4;
  // Assurez-vous que l'accolade suivante est bien présente !
} // <-- CRITIQUE : L'accolade fermante du message LoginResponse

// MESSAGE NDA (Votre dernière correction, doit être en top-level)
message NDAStatus {
    bool nda = 1; 
}

// MESSAGE PONG (Message d'initialisation)
message Pong {
    int32 server_time_ms = 1;
}
// Assurez-vous qu'il n'y ait pas d'accolades orphelines ici.